# ot-harjoitustyo

./: .coverage  .gitignore  README.md  pyproject.toml  tasks.py
data/: database.sqlite
dokumentit/: arkkitehtuuri.md  kayttoohje.md  testausdokumentti.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: build.py  config.py  database_connection.py  index.py  initialize_database.py  login_view.py  recipes_view.py  register_view.py  ui.py
src/repositories/: recipes_repository.py  users_repository.py
src/services/: .recipe_service.py.swp  recipe_service.py
src/tests/: config_test.py  recipe_service_test.py  users_repository_test.py
src/tests/repositories/: recipe_repository_test.py  recipes_repository_test.py  user_repository_test.py  users_repository_test.py
src/ui/: create_recipe_view.py  edit_recipe_view.py  login_view.py  recipe_view.py  recipes_view.py  register_view.py  ui.py
