[tool.poetry]
name = "ot_harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Sami Horttanainen <horttsam@ad.helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.6"
invoke = "^1.5.0"
python-dotenv = "^0.17.0"
Werkzeug = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
coverage = "^5.5"
pytest-dotenv = "^0.5.2"
pylint = "^2.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
